--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "linkedlist-ts",
   "version": "1.0.0",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "typescript": "^5.2.2"
+    "jest-junit": "^16.0.0",
+    "typescript": "^5.7.3",
+    "@types/jest": "^29.5.14",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@types/jest": "^29.5.5",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+
   }
 }
