--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
     "test": "jest --coverage"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "typescript": "^5.7.3",
-    "@types/jest": "^29.5.14",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
-  },
-  "dependencies": {
-
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
